feat: header begin

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <title>Dropbox</title>
 </head>
 <body>
-    dddd
+    <header>
+        <div>sinistra</div>
+        <div>destra</div>
+    </header>
 </body>
 </html>
