--- a/index.html
+++ b/index.html
@@ -16,8 +16,23 @@
 </head>
 <body>
     <header>
-        <div>sinistra</div>
-        <div>destra</div>
+        <div class="left-head">
+            <img class="logo" src="img/logo-small.png" alt="">
+            <ul>
+                <li>Perchè Dropbox</li>
+                <li>Funzioni</li>
+                <li>Piani e prezzi</li>
+            </ul>
+        </div>
+        
+        <div class="right-head">
+            <ul>
+                <li>Supporto</li>
+                <li>Contatta l'ufficio vendite</li>
+                <li>Accedi</li>
+            </ul>
+            <button type="button">Inizia</button>
+        </div>
     </header>
 </body>
 </html>
