feat: buttons created

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li>Contatta l'ufficio vendite</li>
                 <li>Accedi</li>
             </ul>
-            <button type="button">Inizia</button>
+            <button class="btn btn-primary" type="button">Inizia</button>
         </div>
     </header>
 </body>
