--- a/index.html
+++ b/index.html
@@ -34,5 +34,20 @@
             <button class="btn btn-primary" type="button">Inizia</button>
         </div>
     </header>
+
+    <main>
+        <!-- HERO -->
+        <section class="hero">
+            <div class="container">
+                <div class="row">
+                    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo beatae fugit placeat officia vel commodi aperiam deserunt, officiis eaque harum illum reprehenderit vitae, ut mollitia.</h1>
+                    <div class="col-33">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis blanditiis iure omnis. Non, quisquam provident nostrum laboriosam at consequuntur corrupti quo deserunt vitae nam aspernatur dolores, molestias debitis illo cum.</div>
+                    <div class="col-77">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde neque, voluptatibus quidem ipsum nobis quam nesciunt vel reiciendis iusto blanditiis dolores eveniet expedita nihil repellat corporis quasi. Vitae, commodi expedita.</div>
+                </div>
+            </div>
+        </section>
+        <!--/ HERO -->
+    </main>
+
 </body>
 </html>
