--- a/index.html
+++ b/index.html
@@ -41,8 +41,13 @@
             <div class="container">
                 <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo beatae fugit placeat officia vel commodi aperiam deserunt, officiis eaque harum illum reprehenderit vitae, ut mollitia.</h1>
                 <div class="row">
-                    <div class="col-33">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis blanditiis iure omnis. Non, quisquam provident nostrum laboriosam at consequuntur corrupti quo deserunt vitae nam aspernatur dolores, molestias debitis illo cum.</div>
-                    <div class="col-77">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Unde neque, voluptatibus quidem ipsum nobis quam nesciunt vel reiciendis iusto blanditiis dolores eveniet expedita nihil repellat corporis quasi. Vitae, commodi expedita.</div>
+                    <div class="col-33">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis blanditiis iure omnis. Non, quisquam provident nostrum laboriosam at consequuntur corrupti quo deserunt vitae nam aspernatur dolores, molestias debitis illo cum.</p>
+                        
+                    </div>
+                    <div class="col-77">
+                        <img src="img/jumbo.png" alt="">
+                    </div>
                 </div>
             </div>
         </section>
