--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
         <div class="left-head">
             <img class="logo" src="img/logo-small.png" alt="">
             <ul>
-                <li>Perchè Dropbox</li>
-                <li>Funzioni</li>
-                <li>Piani e prezzi</li>
+                <li><a href="#">Perchè Dropbox</a></li>
+                <li><a href="#">Funzioni</a></li>
+                <li><a href="">Piani e prezzi</a></li>
             </ul>
         </div>
         
         <div class="right-head">
             <ul>
-                <li>Supporto</li>
-                <li>Contatta l'ufficio vendite</li>
-                <li>Accedi</li>
+                <li><a href="">Supporto</a></li>
+                <li><a href="">Contatta l'ufficio vendite</a></li>
+                <li><a href="">Accedi</a></li>
             </ul>
             <button class="btn btn-primary" type="button">Inizia</button>
         </div>
