--- a/index.html
+++ b/index.html
@@ -43,8 +43,11 @@
                 <div class="row">
                     <div class="col-33">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis blanditiis iure omnis. Non, quisquam provident nostrum laboriosam at consequuntur corrupti quo deserunt vitae nam aspernatur dolores, molestias debitis illo cum.</p>
-                        
+                        <button class="btn btn-primary" type="button">Inizia la tua prova gratuita</button>
+                        <p>Annulla in qualsiasi momento</p>
+                        <i class="fa-solid fa-arrow-down"></i>
                     </div>
+                    
                     <div class="col-77">
                         <img src="img/jumbo.png" alt="">
                     </div>
