--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo beatae fugit placeat officia vel commodi aperiam deserunt, officiis eaque harum illum reprehenderit vitae, ut mollitia.</h1>
                 <div class="row">
                     <div class="col-33">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis blanditiis iure omnis. Non, quisquam provident nostrum laboriosam at consequuntur corrupti quo deserunt vitae nam aspernatur dolores, molestias debitis illo cum.</p>
+                        <p>Lorem  Lorem ipsum dolor sit amet tetur adiipsum dolor sit amet Lorem ipsum dolor sit amet tetur adi tetur adipisicing elit. Quis blanditiis iure omnis. Non, qu quo deseru consectetur adipisicing elit. Quis blanditiis iure omnis. Non, qu quo deseru.</p>
                         <button class="btn btn-primary" type="button">Inizia la tua prova gratuita</button>
                         <p>Annulla in qualsiasi momento</p>
                         <i class="fa-solid fa-arrow-down"></i>
