feat: column first section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="container">
                 <h1>Tutto ciò che ti serve per il lavoro in un unico posto</h1>
                 <div class="row">
-                    <div class="col-33">
+                    <div class="col-35">
                         <p>Lorem  Lorem ipsum dolor sit amet tetur adiipsum dolor sit amet Lorem ipsum dolor sit amet tetur adi tetur adipisicing elit. Quis blanditiis iure omnis. Non, qu quo deseru consectetur adipisicing elit. Quis blanditiis iure omnis. Non, qu quo deseru.</p>
                         <button class="btn btn-primary" type="button">Inizia la tua prova gratuita</button>
                         <p>Annulla in qualsiasi momento</p>
@@ -69,9 +69,10 @@
                 <label for="css">CSS</label>
 
                 <div class="row">
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                    <div class="col-33">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere laboriosam, maiores nulla earum ducimus voluptatem sint, eligendi inventore quos quas et repudiandae itaque aliquid laudantium sapiente incidunt quis ullam aut.</div>
+                    <div class="col-33">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum rem exercitationem sunt doloremque unde nesciunt assumenda, voluptates quia optio vero dolorem minima autem. Vel beatae quasi autem culpa cupiditate dolorem!</div>
+                    <div class="col-33">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt magni numquam enim cupiditate! Enim illum reprehenderit recusandae quo deleniti, eius fuga autem omnis minus error et laborum sint sunt! Alias.</div>
+                    
                 </div>
 
             </div>
