--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <section class="first">
             <div class="container-small">
-                <h2>Trova il piano business che fa per te</h2>
+                <h2 class="title">Trova il piano business che fa per te</h2>
                 
                 <input type="radio" id="html" name="fav_language" value="HTML">
                 <label for="html">HTML</label>
