fix: first section

--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
                 <div class="row">
                     <div class="col-33 sx">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere laboriosam, maiores nulla earum ducimus voluptatem sint, eligendi inventore quos quas et repudiandae itaque aliquid laudantium sapiente incidunt quis ullam aut.</div>
                     <div class="col-33 cent">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum rem exercitationem sunt doloremque unde nesciunt assumenda, voluptates quia optio vero dolorem minima autem. Vel beatae quasi autem culpa cupiditate dolorem!</div>
-                    <div class="col-33 dx">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt magni numquam enim cupiditate! Enim illum reprehenderit recusandae quo deleniti, eius fuga autem omnis minus error et laborum sint sunt! Alias.</div>
-                    
+                    <div class="col-33 dx">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt magni numquam enim cupiditate! Enim illum reprehenderit recusandae quo deleniti, eius fuga autem omnis minus error et laborum sint sunt! Alias.</div>  
                 </div>
+
+                <div class="row">Questa e' la colonna sotto 100%</div>
 
             </div>
         </section>
