--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                 <h1>Tutto ciò che ti serve per il lavoro in un unico posto</h1>
                 <div class="row">
                     <div class="col-30">
-                        <p>Lorem  Lorem ipsum dolor sit amet tetur adiipsum dolor sit amet Lorem ipsum dolor sit amet tetur adi tetur adipisicing elit. Quis blanditiis iure omnis. Non, qu quo deseru consectetur adipisicing elit. Quis blanditiis iure omnis. Non, qu quo deseru.</p>
+                        <p class="description">Lorem  Lorem ipsum dolor sit amet tetur adiipsum dolor sit amet Lorem ipsum dolor sit amet tetur adi tetur adipisicing elit. Quis blanditiis iure omnis. Non, qu quo deseru consectetur adipisicing elit. Quis blanditiis iure omnis. Non, qu quo deseru.</p>
                         <button class="btn btn-primary" type="button">Inizia la tua prova gratuita</button>
-                        <p>Annulla in qualsiasi momento</p>
+                        <p class="annulla">Annulla in qualsiasi momento</p>
                         <i class="fa-solid fa-arrow-down"></i>
                     </div>
                     
