--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
                 <h2 class="title">Trova il piano business che fa per te</h2>
                 
                 <input type="radio" id="fatturazione mensile" name="fav_fatturazione" value="Fatturazione Mensile">
-                <label for="html">Fatturazione Mensile</label>
+                <label class="invoice" for="html">Fatturazione Mensile</label>
                 <input type="radio" id="fatturazione annuale" name="fav_fatturazione" value="Fatturazione Annuale">
-                <label for="css">Fatturazione Annuale</label>
+                <label class="invoice" for="css">Fatturazione Annuale</label>
 
                 <div class="row">
                     <div class="col-33 sx">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere laboriosam, maiores nulla earum ducimus voluptatem sint, eligendi inventore quos quas et repudiandae itaque aliquid laudantium sapiente incidunt quis ullam aut.</div>
