feat: first plans

--- a/index.html
+++ b/index.html
@@ -69,7 +69,34 @@
                 <label class="invoice" for="css">Fatturazione Annuale</label>
 
                 <div class="row">
-                    <div class="col-33 sx">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere laboriosam, maiores nulla earum ducimus voluptatem sint, eligendi inventore quos quas et repudiandae itaque aliquid laudantium sapiente incidunt quis ullam aut.</div>
+                    <div class="col-33 sx">
+                        <div class="plans">
+                            <span>icona Singolo</span>
+                            <h3>Professional</h3>
+                            <span>€ 12.00</span><br>
+                            <span>/mese</span>
+
+                            <ul>
+                                <li>1 utente</li>
+                                <li>5 TB di spazio di archiviazione</li>
+                                <li>Funzioni di produddività premium e condivisione file semplice e sicura</li>
+                            </ul>
+
+                            <button type="button">Prova gratis per 30 giorni</button>
+
+                            <div><span>oppure</span><a href="#"> acquista ora</a></div>
+
+                            <hr>
+
+                            <h4>Punti Salienti del piano</h4>
+
+                            <ul>
+                                <li>ICONA Invia file finoa 100 GB con Dropbox Transfert</li>
+                                <li>ICONA Cartelle offline su dispositivi mobili</li>
+                            </ul>
+
+                        </div>
+                    </div>
                     <div class="col-33 cent">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum rem exercitationem sunt doloremque unde nesciunt assumenda, voluptates quia optio vero dolorem minima autem. Vel beatae quasi autem culpa cupiditate dolorem!</div>
                     <div class="col-33 dx">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt magni numquam enim cupiditate! Enim illum reprehenderit recusandae quo deleniti, eius fuga autem omnis minus error et laborum sint sunt! Alias.</div>  
                 </div>
