--- a/index.html
+++ b/index.html
@@ -80,10 +80,11 @@
                     <div class="col-33 sx">
                         <span class="plan-people"><i class="icona fa-solid fa-user"></i>Singolo</span>
                         <div class="plans">
-                            <h3 class="plan-type">Professional</h3>
-                            <span>€ 12.00</span><br>
-                            <span>/mese</span>
-
+                            <div class="plan-type">
+                                <h3 class="plan-name">Professional</h3>
+                                <span class="price" >€ 12.00</span>
+                                <span class="per-month">/mese</span>
+                            </div>
                             <ul>
                                 <li>1 utente</li>
                                 <li>5 TB di spazio di archiviazione</li>
