--- a/index.html
+++ b/index.html
@@ -86,20 +86,20 @@
                                 <span class="per-month">/mese</span>
                             </div>
                             <ul>
-                                <li>1 utente</li>
-                                <li>5 TB di spazio di archiviazione</li>
-                                <li>Funzioni di produddività premium e condivisione file semplice e sicura</li>
+                                <li><i class="icona fa-solid fa-user"></i>1 utente</li>
+                                <li><i class="icona fa-solid fa-folder"></i>5 TB di spazio di archiviazione</li>
+                                <li><i class="icona fa-solid fa-share-nodes"></i>Funzioni di produttività premium e condivisione file semplice e sicura</li>
                             </ul>
 
-                            <button type="button">Prova gratis per 30 giorni</button>
+                            <button class="btn-large btn-primary " type="button">Prova gratis per 30 giorni</button>
 
-                            <div><span>oppure</span><a href="#"> acquista ora</a></div>
+                            <div class="buy"><span>oppure</span><a href="#"> acquista ora</a></div>
 
                             <hr>
 
                             <h4>Punti Salienti del piano</h4>
 
-                            <ul>
+                            <ul class="second-list">
                                 <li>ICONA Invia file finoa 100 GB con Dropbox Transfert</li>
                                 <li>ICONA Cartelle offline su dispositivi mobili</li>
                             </ul>
