--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                 <span class="price" >€ 12.00</span>
                                 <span class="per-month">/mese</span>
                             </div>
-                            <ul>
+                            <ul class="first-list">
                                 <li><i class="icona fa-solid fa-user"></i>1 utente</li>
                                 <li><i class="icona fa-solid fa-folder"></i>5 TB di spazio di archiviazione</li>
                                 <li><i class="icona fa-solid fa-share-nodes"></i>Funzioni di produttività premium e condivisione file semplice e sicura</li>
@@ -100,8 +100,8 @@
                             <h4>Punti Salienti del piano</h4>
 
                             <ul class="second-list">
-                                <li>ICONA Invia file finoa 100 GB con Dropbox Transfert</li>
-                                <li>ICONA Cartelle offline su dispositivi mobili</li>
+                                <li><i class="icona fa-solid fa-check"></i> Invia file finoa 100 GB con Dropbox Transfert</li>
+                                <li><i class="icona fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
                             </ul>
 
                         </div>
