fix: "plans" button and links

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 <li><i class="icona fa-solid fa-share-nodes"></i>Funzioni di produttività premium e condivisione file semplice e sicura</li>
                             </ul>
 
-                            <button class="btn-large btn-primary " type="button">Prova gratis per 30 giorni</button>
+                            <button class="btn btn-primary " type="button">Prova gratis per 30 giorni</button>
 
                             <div class="buy"><span>oppure</span><a href="#"> acquista ora</a></div>
 
