--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 <li><i class="icona fa-solid fa-share-nodes"></i>Funzioni di produttività premium e condivisione file semplice e sicura</li>
                             </ul>
 
-                            <button class="btn btn-primary " type="button">Prova gratis per 30 giorni</button>
+                            <button class="btn-large btn-primary " type="button">Prova gratis per 30 giorni</button>
 
                             <div class="buy"><span>oppure</span><a href="#"> acquista ora</a></div>
 
@@ -106,9 +106,38 @@
 
                         </div>
                     </div>
-                    <div class="col-33 cent">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum rem
-                        exercitationem sunt doloremque unde nesciunt assumenda, voluptates quia optio vero dolorem
-                        minima autem. Vel beatae quasi autem culpa cupiditate dolorem!</div>
+                    <!-- column 2 -->
+                    <div class="col-33 sx">
+                        <span class="plan-people"><i class="icona fa-solid fa-user"></i>Singolo</span>
+                        <div class="plans">
+                            <div class="plan-type">
+                                <h3 class="plan-name">Professional</h3>
+                                <span class="price" >€ 12.00</span>
+                                <span class="per-month">/mese</span>
+                            </div>
+                            <ul class="first-list">
+                                <li><i class="icona fa-solid fa-user"></i>1 utente</li>
+                                <li><i class="icona fa-solid fa-folder"></i>5 TB di spazio di archiviazione</li>
+                                <li><i class="icona fa-solid fa-share-nodes"></i>Funzioni di produttività premium e condivisione file semplice e sicura</li>
+                            </ul>
+
+                            <button class="btn-large btn-primary " type="button">Prova gratis per 30 giorni</button>
+
+                            <div class="buy"><span>oppure</span><a href="#"> acquista ora</a></div>
+
+                            <hr>
+
+                            <h4>Punti Salienti del piano</h4>
+
+                            <ul class="second-list">
+                                <li><i class="icona fa-solid fa-check"></i> Invia file finoa 100 GB con Dropbox Transfert</li>
+                                <li><i class="icona fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                            </ul>
+
+                        </div>
+                    </div>
+                    <!--/ column 2 -->
+                    
                     <div class="col-33 dx">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Incidunt magni
                         numquam enim cupiditate! Enim illum reprehenderit recusandae quo deleniti, eius fuga autem omnis
                         minus error et laborum sint sunt! Alias.</div>
