--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                   <label class="invoice" for="css">Fatturazione Annuale</label>
 
                 <div class="row">
+                    <!-- column 1 -->
                     <div class="col-33 sx">
                         <span class="plan-people"><i class="icona fa-solid fa-user"></i>Singolo</span>
                         <div class="plans">
@@ -106,18 +107,20 @@
 
                         </div>
                     </div>
+                    <!-- /column 1 -->
+                    
                     <!-- column 2 -->
                     <div class="col-33 sx">
-                        <span class="plan-people"><i class="icona fa-solid fa-user"></i>Singolo</span>
+                        <span class="plan-people"><i class="icona fa-solid fa-users"></i>Team</span>
                         <div class="plans">
                             <div class="plan-type">
-                                <h3 class="plan-name">Professional</h3>
-                                <span class="price" >€ 12.00</span>
-                                <span class="per-month">/mese</span>
+                                <h3 class="plan-name">Advanced</h3>
+                                <span class="price" >€ 18.00</span>
+                                <span class="per-month">/utente/mese</span>
                             </div>
                             <ul class="first-list">
-                                <li><i class="icona fa-solid fa-user"></i>1 utente</li>
-                                <li><i class="icona fa-solid fa-folder"></i>5 TB di spazio di archiviazione</li>
+                                <li><i class="icona fa-solid fa-users"></i>3 o più utenti</li>
+                                <li><i class="icona fa-solid fa-folder"></i>Tutto lo spazio di cui ha bisogno il tuo team</li>
                                 <li><i class="icona fa-solid fa-share-nodes"></i>Funzioni di produttività premium e condivisione file semplice e sicura</li>
                             </ul>
 
@@ -131,6 +134,8 @@
 
                             <ul class="second-list">
                                 <li><i class="icona fa-solid fa-check"></i> Invia file finoa 100 GB con Dropbox Transfert</li>
+                                <li><i class="icona fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                                <li><i class="icona fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
                                 <li><i class="icona fa-solid fa-check"></i> Cartelle offline su dispositivi mobili</li>
                             </ul>
 
