feat: bottom column

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                                 <li><i class="icona fa-solid fa-share-nodes"></i>Funzioni di produttività premium e condivisione file semplice e sicura</li>
                             </ul>
 
-                            <button class="btn-large btn-primary " type="button">Prova gratis per 30 giorni</button>
+                            <button class="btn-large btn-primary " type="button">Contatto</button>
 
                             <div class="buy"><span>oppure</span><a href="#"> acquista ora</a></div>
 
@@ -180,8 +180,19 @@
                 
                 <!-- column bottom -->
 
-                <div class="row">Questa e' la colonna sotto 100%</div>
-
+                <div class="row">
+                    <div class="col-100">
+                        <span class="plan-people"><i class="icona fa-solid fa-building"></i>Azienda</span>
+                        <div class="plans">
+                            <div class="plan-type">
+                                <h3 class="plan-name">Enterprise</h3>
+                                <span class="price" >Contatta l'ufficio vendite per i prezzi</span>
+                                <span class="per-month">Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala</span>
+                                <button class="btn-large btn-primary " type="button">Prova gratis per 30 giorni</button>
+                            </div>
+                </div>
+                
+                <!-- / column botton -->
             </div>
         </section>
         <!-- / First section -->
