feat : bottom column

--- a/index.html
+++ b/index.html
@@ -183,12 +183,12 @@
                 <div class="row">
                     <div class="col-100">
                         <span class="plan-people"><i class="icona fa-solid fa-building"></i>Azienda</span>
-                        <div class="plans">
+                        <div class="plans column-bottom">
                             <div class="plan-type">
                                 <h3 class="plan-name">Enterprise</h3>
                                 <span class="price" >Contatta l'ufficio vendite per i prezzi</span>
                                 <span class="per-month">Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala</span>
-                                <button class="btn-large btn-primary " type="button">Prova gratis per 30 giorni</button>
+                                <button class="btn-large" type="button">Contatta l'ufficio vendite</button>
                             </div>
                 </div>
                 
