feat bottom left

--- a/index.html
+++ b/index.html
@@ -186,12 +186,28 @@
                     </div>
                 </div>
                     <!-- up -->
+                    <!-- down -->
                 <div class="row row-bottom-down">
-                    <div class="col-67bottom">fdfdfd</div>
-                    <div class="col-33bottom">dssdsdsdsds</div>
-
-
+                    <!-- sx -->
+                    <div class="col-67bottom">
+                        <div class="plans plans-bottom">
+                            <div class="plan-type">
+                                <h3 class="plan-name">Enterprise</h3>
+                                <span class="price" >Contatta l'ufficio vendite per i prezzi</span>
+                            </div>
+                            <p>Soluzioni personalizzate e prezzi su misura per aiutare i professionisti IT nella gestione su qualsiasi scala</p>
+                        </div>
+                    </div>
+                    <!-- /sx -->
+                    <!-- dx -->
+                    <div class="col-33bottom">
+                        <div class="plans plans-bottom">
+                            fssfsffsfs
+                        </div>
+                    </div>
+                    <!-- /dx -->
                 </div>
+                    <!-- / down -->
 
                    
             </div>
