feat: bottom column

--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
                     <!-- /sx -->
                     <!-- dx -->
                     <div class="col-33bottom">
-                        <div class="plans plans-bottom">
-                            fssfsffsfs
+                        <div class="plans plans-bottom dx">
+                            <button class="btn btn-large" type="button">Contatta l'ufficio vendite</button>
                         </div>
                     </div>
                     <!-- /dx -->
