--- a/index.html
+++ b/index.html
@@ -218,7 +218,9 @@
             <div class="container-small">
                 <div class="row">
                     <!-- col left -->
-                    <div class="col-67bottom">jijj</div>
+                    <div class="col-67bottom">
+                        <img src="img/partner.png" alt="two people speaking ">
+                    </div>
                     <!-- / col left -->
 
                     <!-- col right -->
