feat:  section second completed

--- a/index.html
+++ b/index.html
@@ -224,7 +224,11 @@
                     <!-- / col left -->
 
                     <!-- col right -->
-                    <div class="col-33bottom">ijijij</div>
+                    <div class="col-33bottom pad38-30">
+                        <h3 class="title">Entra in contatto con un partner Dropbox</h3>
+                        <p>Trova un partner Dropbox e HelloSign di fiducia.Ottieni le soluzioni e i servizi necessariper raggiungere i tuoi obbiettivi azeindali, tra cui l'implementazione, integrazione, gestione e supporto continui </p>
+                        <button class="btn btn-tertiary" type="button">Trova un partner</button>
+                    </div>
                     <!-- / col right -->
                 </div>
             </div>
