fix: col firstsection

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <!--/ column 2 -->
                     
                     <!-- column 3 -->
-                    <div class="col-33 sx">
+                    <div class="col-33 dx">
                         <span class="plan-people"><i class="icona fa-solid fa-building"></i>Azienda</span>
                         <div class="plans">
                             <div class="plan-type">
