feat: third section 1 fila

--- a/index.html
+++ b/index.html
@@ -248,15 +248,27 @@
                 <!--1 fila  -->
                 <div class="row">
                     <!-- col sx -->
-                    <div class="col-33 sx">fdfd</div>
+                    <div class="col-33 sx">
+                        <img src="img/business-feature-switching-tools.png" alt="">
+                        <h3 class="titolo">Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft office Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
                     <!-- / col sx -->
                     
                     <!-- col cent  -->
-                    <div class="col-33 cent">dfdfd</div>
+                    <div class="col-33 cent">
+                        <img src="img/business-feature-send-files-it.png" alt="">
+                        <h3 class="titolo">Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft office Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
                     <!-- / col cent -->
 
                     <!-- col dx -->
-                    <div class="col-33 dx">fdfdfd</div>
+                    <div class="col-33 dx">
+                        <img src="img/business-feature-coordinate-it.png" alt="">
+                        <h3 class="titolo">Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft office Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
                     <!--/ col dx -->
                 </div>
                 <!--/1 fila  -->
