feat: fourth section

--- a/index.html
+++ b/index.html
@@ -306,6 +306,18 @@
         </section>
         <!--/ third section -->
 
+        <!-- fourth section -->
+        <section class="fourth">
+            <div class="container-small">
+                <div class="row row-fourth">
+                    <h2 class="titolo">Più di 500.000 team utilizzano<br>Dropbox Business</h2>
+                    <a href="#">Scopri di più sui nostri clienti</a>
+                </div>
+            </div>
+        </section>
+        <!--/ fourth section -->
+
+
 
     </main>
 
