--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                                 <li><i class="icona fa-solid fa-share-nodes"></i>Funzioni di produttività premium e condivisione file semplice e sicura</li>
                             </ul>
 
-                            <button class="btn-large btn-primary " type="button">Contatto</button>
+                            <button class="btn-large btn-primary " type="button">Contattaci</button>
 
                             <div class="buy"><span>oppure</span><a href="#"> acquista ora</a></div>
 
