feat sixth structure

--- a/index.html
+++ b/index.html
@@ -325,8 +325,23 @@
         </section>
         <!-- / fifth section -->
 
-        
-
+        <!-- sixth section -->
+        <section class="sixth">
+            <div class="container-small">
+                <div class="row row-sixth">
+                    <!-- col left -->
+                    <div class="col-67bottom">
+                        <h2 class="titolo">Porta Dropbox Business<br>nella tua azienda</h2>
+                    </div>
+                    <!--/ col left -->
+                    
+                    <!-- col right -->
+                    <div class="col-33bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, aliquam, vitae reiciendis rerum voluptates obcaecati consectetur totam unde necessitatibus amet voluptatem quibusdam in beatae nam sequi minima aspernatur harum voluptatibus!</div>
+                    <!--/ col right -->
+                </div>
+            </div>
+        </section>
+        <!-- sixth section -->
     </main>
 
 </body>
