feat: sixth section

--- a/index.html
+++ b/index.html
@@ -336,7 +336,9 @@
                     <!--/ col left -->
                     
                     <!-- col right -->
-                    <div class="col-33bottom">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, aliquam, vitae reiciendis rerum voluptates obcaecati consectetur totam unde necessitatibus amet voluptatem quibusdam in beatae nam sequi minima aspernatur harum voluptatibus!</div>
+                    <div class="col-33bottom">
+                        <button class="btn-large btn-tertiary" type="button">Inizia la tua prova gratuita</button>
+                    </div>
                     <!--/ col right -->
                 </div>
             </div>
