feat: start footer

--- a/index.html
+++ b/index.html
@@ -375,10 +375,11 @@
             </div>
         </section>
         <!--/ seventh section -->
-
-
-
     </main>
+
+    <!-- footer -->
+    <footer></footer>
+    <!--/ footer -->
 
 </body>
 
