feat: footer language

--- a/index.html
+++ b/index.html
@@ -393,20 +393,52 @@
                 </div>
                 <!--/1 column  -->
                 <!-- 2 column -->
-                <div class="col-20footer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, itaque voluptatum eaque quis iusto eius ad sunt in neque aliquam sint autem repellendus, corporis iure voluptatem? Animi rerum id quia!</div>
+                <div class="col-20footer">
+                    <h3 class="footer-title">Prodotti</h3>
+                    <a href="#">Applicazione Desktop</a>
+                    <a href="#">Perché Dropbox</a>
+                    <a href="#">Piani</a>
+                    <a href="#">Sicurezza</a>
+                    <a href="#">funzioni</a>
+                </div>
                 <!--/ 2 column -->
                 <!-- 3 column -->
-                <div class="col-20footer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, itaque voluptatum eaque quis iusto eius ad sunt in neque aliquam sint autem repellendus, corporis iure voluptatem? Animi rerum id quia!</div>
+                <div class="col-20footer">
+                    <h3 class="footer-title">Azienda</h3>
+                    <a href="#">Applicazione Desktop</a>
+                    <a href="#">Perché Dropbox</a>
+                    <a href="#">Piani</a>
+                    <a href="#">Sicurezza</a>
+                    <a href="#">funzioni</a>
+                </div>
                 <!--/ 3 column -->
                 <!-- 4 column -->
-                <div class="col-20footer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, itaque voluptatum eaque quis iusto eius ad sunt in neque aliquam sint autem repellendus, corporis iure voluptatem? Animi rerum id quia!</div>
+                <div class="col-20footer">
+                    <h3 class="footer-title">Supporto</h3>
+                    <a href="#">Applicazione Desktop</a>
+                    <a href="#">Perché Dropbox</a>
+                    <a href="#">Piani</a>
+                    <a href="#">Sicurezza</a>
+                    <a href="#">funzioni</a>
+                </div>
                 <!--/ 4 column -->
                 <!-- 5 column -->
-                <div class="col-20footer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, itaque voluptatum eaque quis iusto eius ad sunt in neque aliquam sint autem repellendus, corporis iure voluptatem? Animi rerum id quia!</div>
+                <div class="col-20footer">
+                    <h3 class="footer-title">Community</h3>
+                    <a href="#">Applicazione Desktop</a>
+                    <a href="#">Perché Dropbox</a>
+                    <a href="#">Piani</a>
+                    <a href="#">Sicurezza</a>
+                    <a href="#">funzioni</a>
+                </div>
                 <!--/ 5 column -->
-
             </div>
             <!--/ row row-footer -->
+            <div class="row row-language">
+                <div class="col-12">
+                    <button class="btn btn-language" type="button">Italiano</button>
+                </div>
+            </div>
         </div>
     </footer>
     <!--/ footer -->
