--- a/index.html
+++ b/index.html
@@ -436,7 +436,8 @@
             <!--/ row row-footer -->
             <div class="row row-language">
                 <div class="col-12">
-                    <button class="btn btn-language" type="button">Italiano</button>
+                    <i class="icona fa-solid fa-earth-americas"></i>
+                    <button class="btn btn-language" type="button">Italiano <i class='fas fa-caret-up'></i></button>
                 </div>
             </div>
         </div>
