feat: partner 3 columns

--- a/index.html
+++ b/index.html
@@ -318,9 +318,20 @@
         <!--/ fourth section -->
 
         <!-- fifth section -->
-        <section class="fifth">
+        <section class="partners">
             <div class="container-fullsize">
-                <div class="row">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero neque fugit id architecto, rem quis consequatur? Magni deleniti aspernatur qui quis, in consequatur dolore, cumque, ipsa ipsum debitis reprehenderit fugit?</div>
+                <div class="row row-partner">
+                    <!-- square 1 -->
+                    <div class="square">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque provident cupiditate vitae similique dolorum, eligendi reiciendis consequuntur aliquid, accusantium quod aliquam necessitatibus dignissimos minus sequi esse molestias doloremque cum nostrum?</div>
+                    <!--/ square 1 -->
+                    <!-- square 2 -->
+                    <div class="square central">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque provident cupiditate vitae similique dolorum, eligendi reiciendis consequuntur aliquid, accusantium quod aliquam necessitatibus dignissimos minus sequi esse molestias doloremque cum nostrum?</div>
+                    <!--/ square 2 -->
+                    <!-- square 3  -->
+                    <div class="square">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque provident cupiditate vitae similique dolorum, eligendi reiciendis consequuntur aliquid, accusantium quod aliquam necessitatibus dignissimos minus sequi esse molestias doloremque cum nostrum?</div>
+                    <!--/ square 3  -->
+                    
+                </div>
             </div>
         </section>
         <!-- / fifth section -->
