feat: partner box 1  structure

--- a/index.html
+++ b/index.html
@@ -322,7 +322,12 @@
             <div class="container-fullsize">
                 <div class="row row-partner">
                     <!-- square 1 -->
-                    <div class="square">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque provident cupiditate vitae similique dolorum, eligendi reiciendis consequuntur aliquid, accusantium quod aliquam necessitatibus dignissimos minus sequi esse molestias doloremque cum nostrum?</div>
+                    <div class="square">
+                        <div class="box"></div>
+                        <div class="box"></div>
+                        <div class="box"></div>
+                        <div class="box"></div>
+                    </div>
                     <!--/ square 1 -->
                     <!-- square 2 -->
                     <div class="square central">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque provident cupiditate vitae similique dolorum, eligendi reiciendis consequuntur aliquid, accusantium quod aliquam necessitatibus dignissimos minus sequi esse molestias doloremque cum nostrum?</div>
