--- a/index.html
+++ b/index.html
@@ -322,18 +322,20 @@
             <div class="container-fullsize">
                 <div class="row row-partner">
                     <!-- square 1 -->
-                    <div class="square">
-                        <div class="box"></div>
+                    <div class="square square-left">
+                        <div class="box box-1">
+                            <img src="img/designit.svg" alt="">
+                        </div>
                         <div class="box"></div>
                         <div class="box"></div>
                         <div class="box"></div>
                     </div>
                     <!--/ square 1 -->
                     <!-- square 2 -->
-                    <div class="square central">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque provident cupiditate vitae similique dolorum, eligendi reiciendis consequuntur aliquid, accusantium quod aliquam necessitatibus dignissimos minus sequi esse molestias doloremque cum nostrum?</div>
+                    <div class="square square-central">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque provident cupiditate vitae similique dolorum, eligendi reiciendis consequuntur aliquid, accusantium quod aliquam necessitatibus dignissimos minus sequi esse molestias doloremque cum nostrum?</div>
                     <!--/ square 2 -->
                     <!-- square 3  -->
-                    <div class="square">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque provident cupiditate vitae similique dolorum, eligendi reiciendis consequuntur aliquid, accusantium quod aliquam necessitatibus dignissimos minus sequi esse molestias doloremque cum nostrum?</div>
+                    <div class="square square-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque provident cupiditate vitae similique dolorum, eligendi reiciendis consequuntur aliquid, accusantium quod aliquam necessitatibus dignissimos minus sequi esse molestias doloremque cum nostrum?</div>
                     <!--/ square 3  -->
                     
                 </div>
