feat: square left

--- a/index.html
+++ b/index.html
@@ -326,9 +326,15 @@
                         <div class="box box-1">
                             <img src="img/designit.svg" alt="">
                         </div>
-                        <div class="box"></div>
-                        <div class="box"></div>
-                        <div class="box"></div>
+                        <div class="box box-2">
+                            <img src="img/arizona_state_university.svg" alt="">
+                        </div>
+                        <div class="box box-3">
+                            <img src="img/university_of_florida.svg" alt="">
+                        </div>
+                        <div class="box box-4">
+                            <img src="img/topps.svg" alt="">
+                        </div>
                     </div>
                     <!--/ square 1 -->
                     <!-- square 2 -->
