--- a/index.html
+++ b/index.html
@@ -341,7 +341,20 @@
                     <div class="square square-central">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque provident cupiditate vitae similique dolorum, eligendi reiciendis consequuntur aliquid, accusantium quod aliquam necessitatibus dignissimos minus sequi esse molestias doloremque cum nostrum?</div>
                     <!--/ square 2 -->
                     <!-- square 3  -->
-                    <div class="square square-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque provident cupiditate vitae similique dolorum, eligendi reiciendis consequuntur aliquid, accusantium quod aliquam necessitatibus dignissimos minus sequi esse molestias doloremque cum nostrum?</div>
+                    <div class="square square-right">
+                        <div class="box box-5">
+                            <img src="img/world_bicycle_relief.svg" alt="">
+                        </div>
+                        <div class="box box-6">
+                            <img src="img/hearst_corp.svg" alt="">
+                        </div>
+                        <div class="box box-7">
+                            <img src="img/lonely_planet.svg" alt="">
+                        </div>
+                        <div class="box box-8">
+                            <img src="img/clear_channel.svg" alt="">
+                        </div>
+                    </div>
                     <!--/ square 3  -->
                     
                 </div>
