feat: partners section

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
         <section class="partners">
             <div class="container-fullsize">
                 <div class="row row-partner">
-                    <!-- square 1 -->
+                    <!-- square sx -->
                     <div class="square square-left">
                         <div class="box box-1">
                             <img src="img/designit.svg" alt="">
@@ -336,11 +336,18 @@
                             <img src="img/topps.svg" alt="">
                         </div>
                     </div>
-                    <!--/ square 1 -->
-                    <!-- square 2 -->
-                    <div class="square square-central">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque provident cupiditate vitae similique dolorum, eligendi reiciendis consequuntur aliquid, accusantium quod aliquam necessitatibus dignissimos minus sequi esse molestias doloremque cum nostrum?</div>
-                    <!--/ square 2 -->
-                    <!-- square 3  -->
+                    <!--/ square sx -->
+                    <!-- square central -->
+                    <div class="square square-central">
+                        <div class="main-partner">
+                            <img src="img/designit.svg" alt="">
+                        </div>
+                        <hr>
+                        <p class="partner-description">I membri del nostro team lavorano costantemente in paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper </p>
+                        <span>Morten Thomsen, Global IT Lead</span>
+                    </div>
+                    <!--/ square central -->
+                    <!-- square dx  -->
                     <div class="square square-right">
                         <div class="box box-5">
                             <img src="img/world_bicycle_relief.svg" alt="">
@@ -355,7 +362,7 @@
                             <img src="img/clear_channel.svg" alt="">
                         </div>
                     </div>
-                    <!--/ square 3  -->
+                    <!--/ square dx  -->
                     
                 </div>
             </div>
