--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
                 <h1>Tutto ciò che ti serve per il lavoro in un unico posto</h1>
                 <div class="row">
                     <div class="col-30">
-                        <p class="description">Lorem Lorem ipsum dolor sit amet tetur adiipsum dolor sit amet Lorem
-                            ipsum dolor sit amet tetur adi tetur adipisicing elit. Quis blanditiis iure omnis. Non, qu
-                            quo deseru consectetur adipisicing elit. Quis blanditiis iure omnis. Non, qu quo deseru.</p>
+                        <p class="description">Finalmente tutti i tuoi strumenti, contenuti e collaboratorisono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente.</p>
                         <button class="btn btn-primary" type="button">Inizia la tua prova gratuita</button>
                         <p class="annulla">Annulla in qualsiasi momento</p>
                         <i class="fa-solid fa-arrow-down"></i>
