fix: first section name

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <!--  First section -->
 
-        <section class="first">
+        <section class="business-plan">
             <div class="container-small">
                 <h2 class="title">Trova il piano business che fa per te</h2>
 
