fix: second section name

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
         <!-- Second section -->
         
-        <section class="second">
+        <section class="get-in-touch">
             <div class="container-small">
                 <div class="row">
                     <!-- col left -->
