fix: third section class name

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         <!--/ Second section -->
         
         <!-- third section -->
-        <section class="third">
+        <section class="dropbox-business">
             <div class="container-small">
                 <!-- titolo -->
                 <div class="row">
