--- a/index.html
+++ b/index.html
@@ -305,9 +305,9 @@
         <!--/ third section -->
 
         <!-- fourth section -->
-        <section class="fourth">
+        <section class="clients">
             <div class="container-small">
-                <div class="row row-fourth">
+                <div class="row row-clients">
                     <h2 class="titolo">Più di 500.000 team utilizzano<br>Dropbox Business</h2>
                     <a href="#">Scopri di più sui nostri clienti</a>
                 </div>
