fix: sixth section name

--- a/index.html
+++ b/index.html
@@ -368,9 +368,9 @@
         <!-- / fifth section -->
 
         <!-- sixth section -->
-        <section class="sixth">
+        <section class="free-trial">
             <div class="container-small">
-                <div class="row row-sixth">
+                <div class="row row-free-trial">
                     <!-- col left -->
                     <div class="col-67bottom">
                         <h2 class="titolo">Porta Dropbox Business<br>nella tua azienda</h2>
