fix: seventh section name

--- a/index.html
+++ b/index.html
@@ -388,9 +388,9 @@
         <!--/ sixth section -->
 
         <!-- seventh section -->
-        <section class="seventh">
+        <section class="faq">
             <div class="container-small">
-                <div class="row row-seventh-up">
+                <div class="row row-faq-up">
                     <div class="faq-title">
                         <h2>Domande frequenti</h2>
                     </div>
